Remove logo margin-top to fix double border in nav

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,6 @@ nav {
   height: 36px;
   width: auto;
   display: block;
-  margin-top: 10px;
 }
 
 .nav-links {
